maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:9: error: not found: value trouverBis
  val xBis = trouverBis(0,H,L)
             ^ShortestPathMaze:10: error: not found: value trouverBis
  val yBis = trouverBis(1,H,L)
             ^