maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var i=0
  for (i <- 1 to 5){
    println(i)
  }
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis = trouverBis(0,H,L)
  val yBis = trouverBis(1,H,L)
    // Your code here
}

